--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -27,5 +27,5 @@ jobs:
         run: |
             choco install rakudostar
             zef --exclude="z" install --debug --/test --test-depends --deps-only .
-      - name: Run Tests
-        run: zef install . --debug
+      - name: Install
+        run: zef install .
